# Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  seed_output.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  health.py  schemas.py
app/core/: dependencies.py  exceptions.py  logging.py
app/mcp/: __init__.py  guardrails.py  server.py
app/mcp/prompts/: README.md  classify_request.txt  matching_orchestrator.txt
app/mcp/tools/: __init__.py  db_tools.py  embedding_tools.py  search_tools.py
app/repositories/: __init__.py  base.py  gemini_client.py  openai_client.py  sns.py  sqs.py  sqs_dev.py  strategy_dev.py  supabase_formal.py  supabase_informal.py  supabase_kpi.py  supabase_strategy.py  tavily.py
app/submodules/: __init__.py
app/submodules/matching/: __init__.py  formal_matcher.py  merger.py  (+4 more)
llm_prompts/: SUMMARIZE_EXTRACT.md
migrations/: 001_informal_knowledge_base.sql  002_search_strategy.sql  003_kpis_and_logs.sql  004_rpc_match_informal.sql  seed_search_strategy.sql
scripts/: seed_strategy.py
tests/dev_mode/: requests.py
tests/integration/: test_crawl_agent.py  test_e2e_orch.py  test_formal_matcher.py  test_matching_pipeline.py  test_on_demand_enricher.py
tests/unit/: test_base_agent.py  test_gemini_client.py  test_guardrails.py  test_informal_matcher.py  test_intent_lock.py  test_mcp_server.py  test_merger.py  test_openai_client.py  test_sns.py  test_sqs.py  test_sufficiency.py  test_supabase_formal.py  test_supabase_informal.py  test_supabase_kpi.py  test_supabase_strategy.py  test_tavily.py  test_validator.py
(+20 files in other folders)
