[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "boto3>=1.42.88",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "llama-index>=0.14.20",
    "llama-index-vector-stores-supabase>=0.5.0",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "supabase>=2.28.3",
    "tavily-python>=0.7.23",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
